--- a/app/src/main/res/layout/activity_create_session.xml
+++ b/app/src/main/res/layout/activity_create_session.xml
@@ -265,6 +265,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="2dp"
         android:orientation="horizontal">
 
         <ImageView
