--- a/app/src/main/res/layout/user_frontpage.xml
+++ b/app/src/main/res/layout/user_frontpage.xml
@@ -187,9 +187,8 @@
     <LinearLayout
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="2dp"
         android:background="@color/main_color"
         android:orientation="horizontal">
 
@@ -199,6 +198,7 @@
             android:layout_weight="1" />
 
         <ImageView
+            android:layout_marginTop="15dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_home" />
@@ -209,6 +209,7 @@
             android:layout_weight="3" />
 
         <ImageView
+            android:layout_marginTop="15dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_user" />
