--- a/app/src/main/res/layout/activity_chapter1result.xml
+++ b/app/src/main/res/layout/activity_chapter1result.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="40dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -27,10 +29,6 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/search" />
     </LinearLayout>
 
     <!--    Box hiển thị kết quả-->
@@ -53,13 +51,13 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
-            android:text="Working Shaft Power"
+            android:text="Công suất tương đương (Ptđ)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="10dp"
@@ -68,12 +66,14 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/resultP_tđ"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#449D00"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -90,13 +90,13 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="Esseintial Motor Power"
+            android:text="Công suất cần thiết (Pct)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="10dp"
@@ -105,17 +105,20 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/resultP_ct"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#449D00"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="kW"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -127,13 +130,13 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="Torque"
+            android:text="Số vòng quay sơ bộ (nsb)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="10dp"
@@ -142,25 +145,30 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/resultN_s_b"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#449D00"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nm"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Vòng/phút"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
